BES-86: Updates to the book objects